--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
+  
+.main_container {
+  width: 780px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+
+.main_heading {
+  font-size: 40px;
+  color: #1056c7;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contacts_heading {
+  text-align: center;
+  color: #1056c7;
+  font-size: 36px;
 }
